# Zs.DWFToolkit

./: .dockerignore  .gitignore  CLAUDE.md  Directory.Build.props  Dockerfile  README.md  Zs.DWFToolkit.slnx
.claude/skills/dwf-toolkit/: SKILL.md
.github/workflows/: ci.yml
docs/: API.md  BUILD.md  CONVERSION.md  DESIGN.md  INTEGRATION.md  ISSUE-stamp-loses-plotinfo.md  LIMITATIONS.md  NATIVE_INTEGRATION.md  ROADMAP.md  THIRD_PARTY_DWFTK_ODA.md  W2D_RENDERING.md
native-prebuilt/: README.md
native-prebuilt/linux-arm64/: zs_dwf_worker
native-prebuilt/linux-x64/: zs_dwf_worker
native-prebuilt/osx-arm64/: zs_dwf_worker
samples/Zs.DWFToolkit.CliDemo/: Program.cs  Zs.DWFToolkit.CliDemo.csproj
scripts/: build-native-release.sh  build-native.ps1  build-native.sh  build-wasm.sh  setup-oda-dwftoolkit.ps1  setup-oda-dwftoolkit.sh  smoke-test.sh
src/Zs.DWFToolkit/: Zs.DWFToolkit.csproj
src/Zs.DWFToolkit.Native/: CMakeLists.txt
src/Zs.DWFToolkit.Native/compat/oda/: OdInterlockedIncDec.h  OdPlatformSettings.h
src/Zs.DWFToolkit.Native/compat/oda/Include/: OdInterlockedIncDec.h  OdPlatformSettings.h
src/Zs.DWFToolkit.Native/include/: zs_dwf_toolkit_native.h
src/Zs.DWFToolkit.Native/src/: zs_dwf_toolkit_native.cpp
src/Zs.DWFToolkit.Native/src/dwf/: OdaDwfAdapter.cpp  OdaDwfAdapter.h
src/Zs.DWFToolkit.Native/src/edit/: W2dStamp.cpp  W2dStamp.h
src/Zs.DWFToolkit.Native/src/image/: Group4Decoder.cpp  Group4Decoder.h
src/Zs.DWFToolkit.Native/src/pdf/: MinimalPdf.cpp  MinimalPdf.h  PdfVectorCanvas.cpp  PdfVectorCanvas.h
src/Zs.DWFToolkit.Native/src/render/: ICanvas.h  MinimalPng.cpp  MinimalPng.h  RasterCanvas.cpp  RasterCanvas.h
src/Zs.DWFToolkit.Native/src/text/: TextRenderer.cpp  TextRenderer.h
src/Zs.DWFToolkit.Native/src/w2d/: W2dWhipRenderer.cpp  W2dWhipRenderer.h
src/Zs.DWFToolkit.Native/tests/: dwf_package_tests.cpp  group4_tests.cpp  layer_tests.cpp  ocean_regression_tests.cpp  pdf_vector_tests.cpp  raster_canvas_tests.cpp  w2d_roundtrip_tests.cpp
src/Zs.DWFToolkit.Native/tools/: zs_dwf_worker.cpp
src/Zs.DWFToolkit/Abstractions/: IDwfConverter.cs  IDwfDocumentReader.cs  IDwfEditor.cs  IDwfPackageWriter.cs  IDwfThumbnailExtractor.cs  INativeDwfRenderer.cs
src/Zs.DWFToolkit/Conversion/: DwfRasterImageExtractor.cs  DwfThumbnailExtractor.cs  DwfxExternalConverter.cs  SimpleImagePdfWriter.cs
src/Zs.DWFToolkit/Edit/: DwfPackageStamper.cs
src/Zs.DWFToolkit/Internal/: DwfPackage.cs  FileKindDetector.cs  ImageProbe.cs  PackageEntryClassifier.cs  PngDensity.cs  ProcessRunner.cs  SafePath.cs  W2dPlotInfo.cs
src/Zs.DWFToolkit/Models/: DwfDocumentInfo.cs  DwfErrorCodes.cs  DwfFileKind.cs  DwfImageStamp.cs  DwfLayerInfo.cs  DwfPackageEntryInfo.cs  DwfPackageWriteResult.cs  DwfPageInfo.cs  DwfPageTransform.cs  DwfRenderOptions.cs  DwfRenderResult.cs  DwfStampRect.cs  DwfThumbnailResult.cs
src/Zs.DWFToolkit/Native/: NativeDwfEditor.cs  NativeDwfRenderer.cs  NativeMethods.cs  ProcessNativeDwfRenderer.cs
src/Zs.DWFToolkit/Services/: DwfDocumentReader.cs  DwfPackageWriter.cs  ZsDwfToolkit.cs
tests/Plot/DWF/: 1_A3+0.5.dwf  2_A1.dwf  3_A3.dwf  4_A3.dwf
tests/Zs.DWFToolkit.Tests/: TestData.cs  Zs.DWFToolkit.Tests.csproj
tests/Zs.DWFToolkit.Tests/Conversion/: DwfxExternalConverterTests.cs  SimpleImagePdfWriterTests.cs
tests/Zs.DWFToolkit.Tests/Edit/: DwfPackageStamperTests.cs
tests/Zs.DWFToolkit.Tests/Internal/: DwfPackageTests.cs  FileKindDetectorTests.cs  ImageProbeTests.cs  PackageEntryClassifierTests.cs  PngDensityTests.cs  W2dPlotInfoTests.cs
tests/Zs.DWFToolkit.Tests/Native/: NativeDwfEditorTests.cs  NativeDwfRendererTests.cs  ProcessNativeDwfRendererTests.cs
tests/Zs.DWFToolkit.Tests/Services/: DwfDocumentReaderPaperSizeTests.cs  DwfDocumentReaderTests.cs
tests/data/: NOTICE.md  binary_sample.w2d
wasm/dwf-web/: .gitignore  README.md  index.html  main.js
wasm/zs-dwf-wasm/: Cargo.toml  README.md
wasm/zs-dwf-wasm/demo/: index.html
wasm/zs-dwf-wasm/examples/: render.rs
wasm/zs-dwf-wasm/src/: canvas.rs  lib.rs  w2d.rs
