[package]
name = "zs-dwf-wasm"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM W2D renderer spike (route B) — parses ASCII W2D and rasterizes to RGBA, no ODA dependency"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
